[package]
name = "disco-gaben"
version = "0.1.3"
authors = ["Markus Warne <markus.warne@gmail.com>", "Johan Kamb <johan@kamb.me>"]
edition = "2018"

[dependencies]
kankyo = "0.2.0"
serenity = "0.5"
chrono = "0.4"
typemap = "0.3.3"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }